--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Store</title>
 
-    <link rel="stylesheet" href="../src/site/styles.min.css" />
+    <link rel="stylesheet" href="/src/site/styles.min.css" />
   </head>
   <body>
     <header class="header">
@@ -405,7 +405,7 @@
         </div>
     </div>
 
-    <script type="module" src="../src/site/main.js" defer></script>
+    <script type="module" src="/src/site/main.js" defer></script>
   </body>
 
 </html>
