Change video rendering

--- a/index.html
+++ b/index.html
@@ -100,8 +100,15 @@
             muted
             playsinline
           >
-          <source src="../src/assets/video/home_compresed.webm" type="video/webm" />
-            <source src="../src/assets/video/home_compresed.mp4" type="video/mp4" />
+            <source src="../src/assets/video/home_compresed.webm" media="(min-width: 824px)" type="video/webm" />
+            <source src="../src/assets/video/home_compresed.mp4" media="(min-width: 824px)" type="video/mp4" />
+
+            <source src="../src/assets/video/home_tab.webm" media="(min-width: 630px)" type="video/webm" />
+            <source src="../src/assets/video/home_tab.mp4" media="(min-width: 630px)" type="video/mp4" />
+
+            <source src="../src/assets/video/home_mb.webm" type="video/webm" />
+            <source src="../src/assets/video/home_mb.mp4" type="video/mp4" />
+
             Twój przeglądarka nie obsługuje tagu video.
             </video>
           <div class="content-container">
@@ -221,8 +228,14 @@
             muted
             playsinline
           >
-          <source src="../src/assets/video/home_video_compresed.webm" type="video/webm" />
-          <source src="../src/assets/video/home_video_compresed.mp4" type="video/mp4" />
+          <source src="../src/assets/video/home_video_compresed.webm" media="(min-width: 824px)" type="video/webm" />
+          <source src="../src/assets/video/home_video_compresed.mp4" media="(min-width: 824px)" type="video/mp4" />
+
+          <source src="../src/assets/video/home_video_tab.webm" media="(min-width: 630px)" type="video/webm" />
+          <source src="../src/assets/video/home_video_tab.mp4" media="(min-width: 630px)" type="video/mp4" />
+
+          <source src="../src/assets/video/home_video_mb.webm" type="video/webm" />
+          <source src="../src/assets/video/home_video_mb.mp4" type="video/mp4" />
           Your browser does not support the video tag.
             </video>
             <div class="container__content-container--content">
